css/stylesheet.css
body {
    background-color: #ffffff;
}

.wrapLeft {
    float: left;
}

.jumbotron {
    z-index: -1;
    margin-left: 3%;
    background-image: url("https://res.cloudinary.com/springboard-images/image/upload/q_auto,f_auto,fl_lossy/wordpress/2019/07/sb-blog-programming.png");
    background-size: cover;
    color: white;
    height: 100vh;
    
}

.obiWan h1 {
    padding-top: 10%;
    text-align: center;
    background-color: rgb(0, 9, 129);
    color: white;
    height: 300px;
}
.obiWan h3 {
    margin-top: 4%;
    text-align: center; 
}

.buttonPad {
    margin-top: 4%;
    margin-bottom: 4%;
}

.footerClass {
    position: fixed;
    bottom: 0;
    width: 100vw;
    background-color: darkblue;
    color: white;
}

@media only screen and (max-height: 600px) {
    /* Mobile Menu */
    .mattsnavbar {
        display: none;
    }


    .mobsocialList {
        position: fixed;
        right: 0;
    }
}
@media only screen and (max-width: 990px) {
    .mobsocialList {
        position: static;
    }
}

@media only screen and (min-height: 600px) {
    /* Desktop Menu */
    .mattsmobnavbar {
        display: none;
    }
    .mattsnavbar {
        background-color: #f3f3f3;
        z-index: 1;
        text-align: center;
        position: fixed;
        padding-left: 10px;
        height: 100%;
        width: 65px;
        }

    .mattsnavbar ul {
        text-align: center;
        line-height: 2;
        margin-left:-3px;
        font-size: 12px;
        padding: 0;
        width: 50px;
        list-style-type: none;
        
    }
    .mattsnavbar .mainiconPad {
        margin-bottom: 20px;
    }
    .mattsnavbar .mainImage {
        width: 30px;
        height: 30px;
        filter: opacity(70%);
        transition: filter 1s;
    }
    .mattsnavbar .mainImage:hover {
        filter: opacity(100%);
  
    }

    .mattsnavbar .secondiconPad {
        margin-bottom: 10px;
    }
    .mattsnavbar .secondImage {
        width: 15px;
        height: 15px;
    }

    .socialList {
      position: fixed;
      bottom: 0;
    }

}

